# async-task-manager

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  run_worker.py
migrations/: env.py
migrations/versions/: aeaca44a5e65_создание_таблиц_для_задач.py
src/: main.py
src/api/: __init__.py  health.py  task_routes.py
src/async_task_manager/: main.py
src/async_task_manager/api/: __init__.py  health.py  task_routes.py
src/async_task_manager/core/: config.py  db.py  rabbitmq.py
src/async_task_manager/models/: __init__.py  task.py
src/async_task_manager/repositories/: __init__.py  task_repository.py
src/async_task_manager/schemas/: __init__.py  error.py  task.py
src/async_task_manager/services/: __init__.py  task_service.py
src/async_task_manager/workers/: task_worker.py
src/core/: __init__.py  config.py  db.py  rabbitmq.py
src/models/: __init__.py  task.py
src/repositories/: __init__.py  task_repository.py
src/schemas/: __init__.py  task.py
src/services/: __init__.py  task_service.py
src/workers/: __init__.py  task_worker.py
tests/: conftest.py  test_api.py  test_priority.py
tests/test_integration/: conftest.py  test_cancel_task.py  test_create_task.py  test_priority.py
