[project]
name = "async-task-manager"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.2",
    "async-sqlalchemy>=1.0.0",
    "fastapi[standard]>=0.115.13",
    "rabbitmq>=0.2.0",
    "aio-pika>=9.3.0",
    "asyncpg>=0.29.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]
